bug_report/oceanbase_bug_report/946.txt
ID: 946
Title: [Bug]: Compile error on centos 7.9
Description:
### Please check the issue list for the same bug

- [X] I have checked issue list and this bug is encountered for the first time.

### Environment

```markdown
[root@centos-linux 3rd]# cat /etc/*release*
CentOS Linux release 7.9.2009 (Core)
Derived from Red Hat Enterprise Linux 7.8 (Source)
NAME="CentOS Linux"
VERSION="7 (Core)"
ID="centos"
ID_LIKE="rhel fedora"
VERSION_ID="7"
PRETTY_NAME="CentOS Linux 7 (Core)"
ANSI_COLOR="0;31"
CPE_NAME="cpe:/o:centos:centos:7"
HOME_URL="https://www.centos.org/"
BUG_REPORT_URL="https://bugs.centos.org/"

CENTOS_MANTISBT_PROJECT="CentOS-7"
CENTOS_MANTISBT_PROJECT_VERSION="7"
REDHAT_SUPPORT_PRODUCT="centos"
REDHAT_SUPPORT_PRODUCT_VERSION="7"

CentOS Linux release 7.9.2009 (Core)
CentOS Linux release 7.9.2009 (Core)
cpe:/o:centos:centos:7
```


### Fast Reproduce Steps(Required)

sh build.sh init

sh build.sh rpm

cd build_rpm

make rpm

### Actual Behavior

[ 88%] Building CXX object tools/ob_admin/CMakeFiles/ob_admin.dir/usec_tool/ob_admin_usec_executor.cpp.o
In file included from /root/workbench/oceanbase/tools/ob_admin/usec_tool/ob_admin_usec_executor.cpp:14:
/root/workbench/oceanbase/tools/ob_admin/usec_tool/ob_admin_usec_executor.h:40:18: error: field has incomplete type 'oceanbase::common::ObTimeZoneInfo'
  ObTimeZoneInfo tz_info_;
                 ^
/root/workbench/oceanbase/deps/oblib/src/lib/timezone/ob_time_convert.h:26:7: note: forward declaration of 'oceanbase::common::ObTimeZoneInfo'
class ObTimeZoneInfo;
      ^
/root/workbench/oceanbase/tools/ob_admin/usec_tool/ob_admin_usec_executor.cpp:33:11: error: variable has incomplete type 'oceanbase::common::ObObj'
    ObObj result;
          ^
/root/workbench/oceanbase/deps/oblib/src/lib/timezone/ob_time_convert.h:33:8: note: forward declaration of 'oceanbase::common::ObObj'
struct ObObj;
       ^
2 errors generated.
make[3]: *** [tools/ob_admin/CMakeFiles/ob_admin.dir/usec_tool/ob_admin_usec_executor.cpp.o] 错误 1
make[2]: *** [tools/ob_admin/CMakeFiles/ob_admin.dir/all] 错误 2
make[1]: *** [CMakeFiles/rpm.dir/rule] 错误 2
make: *** [rpm] 错误 2

### Expected Behavior

_No response_

### other information

_No response_